# infigraph

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.cargo-husky/hooks/: pre-commit
.claude/skills/adding-a-language/: SKILL.md
.claude/skills/cross-file-call-resolution/: SKILL.md
.claude/skills/debugging-indexing-watch/: SKILL.md
.claude/skills/multi-repo-groups/: SKILL.md
.claude/skills/review-pr-against-issue/: SKILL.md
.claude/skills/scip-enrichment/: SKILL.md
.claude/skills/taint-analysis/: SKILL.md
.cursor/rules/: adding-a-language.mdc  cross-file-call-resolution.mdc  debugging-indexing-watch.mdc  infigraph.mdc  multi-repo-groups.mdc  review-pr-against-issue.mdc  scip-enrichment.mdc  taint-analysis.mdc
.github/workflows/: ci.yml  release.yml
crates/infigraph-cli/: Cargo.toml
crates/infigraph-cli/src/: agent.rs  analysis_commands.rs  commands.rs  config_targets.rs  git_commands.rs  graph_commands.rs  hooks.rs  (+8 more)
crates/infigraph-confluence/: Cargo.toml
crates/infigraph-core/: Cargo.toml
crates/infigraph-docs/: Cargo.toml
crates/infigraph-grammar-plugin/: Cargo.toml
crates/infigraph-languages/: Cargo.toml
crates/infigraph-mcp/: Cargo.toml
crates/tree-sitter-vb6/: Cargo.toml  LICENSE  README.md  build.rs
crates/tree-sitter-vb6/src/: lib.rs
docs/: CODE-PARSING.md  CONTEXT-COMPRESSION.md  DESIGN-language-agnostic-cross-repo-linking.md  DOCUMENT-INDEXING.md  PLAN-context-compression.md  REMOTE-MULTI-REPO.md  index.md
npm/: README.md  install.js  migrate.js  pack-platforms.sh  package.json
(+89 files in other folders)
